  * Fixed rotaxis returning NaN if a=b (Issue #1045)
  * Fixed align_principal_axis onto a principal axes (Issue #1045)
  * Fixed NCDFWriter wrote velocities instead of forces if
    convert_units=False was set: now correctly writes forces (PR #1113)
  * Fixed warn about missing cython package in dev builds
  * Fix align.rotation_matrix checks array shape equality (Issue #1152)

Changes
  * Started unifying the API of analysis classes (named internally
    "Bauhaus" style; see Issue #719)
  * Added protected variable _frame_index to to keep track of frame iteration
    number in AnalysisBase
  * Added new AlignTraj class for alignment. (Issue #845)
  * Added new diffusionmap module for dimension reduction (Issue #857)
  * Added new PCA module for dimension reduction (PR #896)
  * Qcprot now takes N x 3 arrays instead of 3 x N arrays. This gives about a
    40% speed up. (PR #930)
  * The ProgressMeter class now has a `dynamic` keyword argument. It is now
    recommended to provide format strings using the new python format syntax,
    the old %-based syntax is still available but will be deprecated.
    (PR #944)
  * Analysis.rms.RMSD now confirms to standard analysis API (Issue #893)
  * Fragments in Universe.fragment are now sorted by the index of their first
    atom. (Issue 1007)
  * atoms.tranform/translate/rotate/rotateby return original atomgroup
    (Issue #1010)
  * atoms.translate/rotateby don't accept AtomGroup tuples as
    parameters anymore (Issue #1025)
  * atoms.rotate by default now uses the centroid as center of
    rotation like rotateby (Issue #1022)
  * XTCFile and TRRFile only raise IOError now on error.
  * Deprecate usage of MDAnalaysis.core.AtomGroup
  * get_writer_for() returns NullWriter when filename=None instead of
    raising TypeError and filename is now a required arg instead of kwarg
  * moved coordinates.base.ChainReader to coordinates.chain.ChainReader